2008-01-31	Dmitry Dulepov	<dmitry@typo3.org>

	* Changed to use ratings extension instead of built-in rated feature
	* Changed inclusion of the plugin to show error message if TS template is not included
	* Initial work on localization feature

2008-01-19	Dmitry Dulepov	<dmitry@typo3.org>

	* Committed some fies for ratings feature
	* Changed TYPO3 logo in the manual

2007-12-14	Patrick Broens	<patrick@netcreators.com>

	* Moved icons to folder 'res'
	* Removed addPItoST43 method and moved constants and setup to static template list
	* Deleted old unused files
	* Moved flexform.xml into own folder
	* Splitted TCA files for each table and moved to TCA folder

2007-12-10	Dmitry Dulepov	<dmitry@typo3.org>

	* Added ratings

2007-12-07	Dmitry Dulepov	<dmitry@typo3.org>

	* Language files moved to translation server

2007-12-06	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #2225: Labels cannot be overriden via TS
	* Fixed bug #5219: invalid attribute in javascript
	* Fixed bug #4642: Wrong syntax in static template

2007-10-01	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed: "Show all" did not expand all items
	* Fixed: FireFox displayed collapsed FAQs with indent if CSS styled content is used

2007-09-26	Dmitry Dulepov	<dmitry@typo3.org>

	* Related FAQs are now shown in single view

2007-09-26	Dmitry Dulepov	<dmitry@typo3.org>

	* Added related and related_links field to tx_irfaq_q table
	* Added TCEmain hook to handle bidirectional relations between FAQ items
	* Added displaying of related and related_links fields
	* Documentation updated to list new stdWrap entries for related items

2006-11-08  Patrick Broens  <patrick@netcreators.com>
	+ Added a language label for show/hide all

2006-10-27  Patrick Broens  <patrick@netcreators.com>
	~ CSS-styles in static template instead of standard typoscript
	~ Locallang files to XML

2006-10-24  Patrick Broens  <patrick@netcreators.com>
