@@ -1,3 +1,7 @@
+2008-02-01	Dmitry Dulepov	<dmitry@typo3.org>
+
+	* Changed localization to use content.sys_language_overlay option correctly
+
 2008-01-31	Dmitry Dulepov	<dmitry@typo3.org>
 
 	* Changed to use ratings extension instead of built-in rated feature
